feat:add header and mainContacts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,38 @@
 </head>
 
 <body>
-    
+    <div class="main">
+        <header>
+            <img src="avatar_140х140.jpg" alt="avatar">
+            <h1>Dmitry Astrashenia</h1>
+            <h5>front-end developer</h5>
+        </header>
+        <hr>
+        <section class="main__contacts">
+            <h3>Сontacts:</h3>
+            <ul>
+                <li><span class="main__italic">location: </span> Minsk
+                </li>
+                <li><span class="main__italic">tel:</span> <a href="tel:+375297016562">
+                        +375 29 <strong>7016562</strong>
+                    </a>
+                </li>
+                <li><span class="main__italic"> email:</span>
+                    <a href="dmitryastrashenia@gmail.com">
+                        dmitryastrashenia@gmail.com
+                    </a>
+                </li>
+                <li><span class="main__italic">social network:</span> <a
+                        href="https://www.linkedin.com/in/dmitry-astrashenia/">Linkedin</a>
+                </li>
+                <li>
+                    <span class="main__italic">skype:</span> <a href="skype:Dimon713_86"> Dimon713_86</a>
+                </li>
+            </ul>
+        </section>
+        <hr>
+        
+    </div>
 </body>
 
 </html>
