feat:add mainSkills, mainExperience, mainEducation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,103 @@
             </ul>
         </section>
         <hr>
-        
+        <section class="main__skills"></section>
+            <h3>Skills:</h3>
+            <ul>
+                <li>
+                    HTML5 & CSS3
+                    <ul>
+                        <li>
+                            Flex and Grid CSS
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    JavaScript
+                    <ul>
+                        <li>
+                            ES6, DOM, AJAX, JSON, SVG, jQuery
+                        </li>
+                    </ul>
+                </li>
+                <li>React</li>
+                <li>Webpack</li>
+                <li>GitHub</li>
+                <li>Node.js</li>
+                <li> TypeScript</li>
+                <li> Basic knowledge of Angular</li>
+                <li>English-A1</li>
+            </ul>
+        </section>
+        <hr>
+        <section class="main__experience">
+            <h3>Experience IT Academy/ front-end developer</h3>
+            <h6>September 2019 – November 2020, Minsk</h6>
+            <p>Trained at the IT Academy in the front-end developer direction. The course project is an online store
+                written using the React library. I used the following technologies: jQuery for the slider, Google
+                Sheets
+                for the database, AJAX for requesting data from the server, Canvas for price charts, Redux for
+                working
+                with the state of the cart, locallstorage for storing the order object.
+                <br>
+                <a href="https://dimon713.ru/pump-motor/gear-pump/1">Link to the project</a>
+            </p>
+        </section>
+        <hr>
+        <section class="main__education">
+            <h3>Education IT Academy/ front-end developer</h3>
+            <h6>August 2020 – November 2020, Minsk</h6>
+            <p> Web Development Using React & Angular Course project: online store of hydraulic equipment React,
+                Redax,
+                WebPack, Node.js.
+                <br>
+                <a
+                    href="https://github.com/DmitryAstrashenia/M-FD3-13-20-5/tree/master/%D0%9A%D1%83%D1%80%D1%81%D0%BE%D0%B2%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%20FD3">Link
+                    to the github project
+                </a>
+            </p>
+
+
+            <h3> IT Academy/ front-end developer</h3>
+            <h6>February 2020 – June 2020, Minsk</h6>
+
+            <p> Web Application Development with JavaScript Course project: online store of hydraulic equipment
+                JavaScript (ES6, DOM, AJAX, JSON), SPA, SVG, jQuery. As a google sheets database.
+                <br>
+                <a
+                    href="https://github.com/DmitryAstrashenia/be-back/tree/master/%D0%9A%D1%83%D1%80%D1%81%D0%BE%D0%B2%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82">Link
+                    to the github project
+                </a>
+            </p>
+
+
+            <h3> IT Academy/ front-end developer</h3>
+            <h6>September 2019 – December 2019, Minsk</h6>
+
+            <p>
+                Website Development With HTML, CSS, JavaScript Course project: site layout for the provision of
+                repair
+                and sales services for hydraulic equipment. HTML5 & CSS3.
+                <br>
+                <a
+                    href="https://github.com/DmitryAstrashenia/be-back/tree/master/%D0%9A%D1%83%D1%80%D1%81%D0%BE%D0%B2%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82">Link
+                    to the github project
+                </a>
+            </p>
+
+
+            <h3>Belarusian National Technical University / Mechanical engineer</h3>
+            <h6>September 2003 – August 2008, Minsk</h6>
+
+            <p>Faculty: Automotive Specialty: Hydropneumatic systems of mobile and technological machines.</p>
+        </section>
+        <hr>
+        <footer>
+            <h3> Additional information:</h3>
+            <p>Book: "Learning JavaScript Programming" E. Robson, Eric Freeman</p>
+            <p> Site: <a href="https://learn.javascript.ru/">https://learn.javascript.ru/</a></p>
+            <p><a href="https://github.com/DmitryAstrashenia">Link to profile in github</a></p>
+        </footer>
     </div>
 </body>
 
